Fixed the overflowing for the mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -114,7 +114,7 @@
 
     .leftWrapper {
         width: 100%;
-        height: 70%;
+        min-height: 70%;
     }
 
     .rightWrapper {
